k8s/db-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: mega_app
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: mega_app
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongo-svc"
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: easyshop-mongodb
        image: mongo:6.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: vault
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: vault
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
