k8s/shop-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: shop-svc
  namespace: mega-app
spec:
  type: clusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: mega
